<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".layouts.Recruit.UpdatesVideo">

    <androidx.cardview.widget.CardView

        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/green2"
        app:cardCornerRadius="0dp"
        app:contentPadding="12sp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:onClick="btn_back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txt_screenNameVideo"
            android:layout_width="190dp"
             android:gravity="center"
             android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@android:color/white"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            android:layout_height="29dp"/>

    </androidx.cardview.widget.CardView>

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:autoPlay="false"
        app:enableAutomaticInitialization="true"
        app:showYouTubeButton="false"
        app:showVideoDuration="true"
        app:showSeekBar="true"
        android:layout_below="@+id/appBar"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:showFullScreenButton="false"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_conduts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/youtube_player_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/code_of_conduct_1"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Article I:"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/code_of_conduct_2"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Article II:"

                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/code_of_conduct_3"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Article III:"

                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/conduct_4"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Article IV:"


                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/conduct_5"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Article V:"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/conduct_6"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Article VI:"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/conduct7"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>


    </androidx.cardview.widget.CardView>


</RelativeLayout>